# hashicorp-vault-audit-analysis

./: .env.example  .errcheckignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.ui  FRONTEND_SETUP.md  Makefile  README.md  counter.py  docker-compose.yml  go.mod  go.sum  nginx.conf  requirements-dev.txt  requirements.txt  run_in_venv.sh  setup_venv.sh  summarize_kv_usage.py
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/: WORKFLOWS.md  dependabot.yml
docs/: STRUCTURE.md
examples/: sample_audit.log.example  setup-test-auth.sh
frontend/: .env.example  ARCHITECTURE.md  BUILD_SUMMARY.md  MANIFEST.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: install-git-hooks.sh  run.sh
src/: lib.rs  main.rs  vault_api.rs
tests/: command_error_tests.rs  completion_tests.rs  (+9 more)
vault-audit-tools/: .gitignore  Cargo.toml  README.md  deny.toml
vault-audit-tools/.githooks/: pre-commit
vault-audit-tools/src/: lib.rs  main.rs  vault_api.rs
vault-audit-tools/src/audit/: mod.rs  parser.rs  types.rs
vault-audit-tools/src/commands/: airflow_polling.rs  client_activity.rs  entity_churn.rs  entity_creation.rs  entity_gaps.rs  entity_list.rs  entity_timeline.rs  k8s_auth.rs  kv_analyzer.rs  kv_compare.rs  kv_summary.rs  mod.rs  path_hotspots.rs  preprocess_entities.rs  system_overview.rs  token_export.rs  token_lookup_abuse.rs  token_operations.rs
vault-audit-tools/src/utils/: mod.rs  progress.rs  time.rs
vault-audit-tools/tests/: audit_types_tests.rs  command_error_tests.rs  completion_tests.rs  entity_analysis_tests.rs  entity_list_tests.rs  format_detection_tests.rs  format_number_tests.rs  integration_tests.rs  parser_tests.rs  progress_tests.rs  time_utils_tests.rs  vault_api_tests.rs
(+111 files in other folders)
