[package]
name = "vault-audit-tools"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance command-line tools for analyzing HashiCorp Vault audit logs with intelligent ephemeral entity detection"
repository = "https://github.com/trenner1/hashicorp-vault-audit-analysis"
homepage = "https://github.com/trenner1/hashicorp-vault-audit-analysis"
documentation = "https://docs.rs/vault-audit-tools"
readme = "README.md"
keywords = ["vault", "hashicorp", "audit", "security", "analysis"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Trevor Renner"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
flate2 = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "vault-audit"
path = "src/main.rs"
